--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/mlcundayag/easy-socialNetwork-noSQL#readme",
   "dependencies": {
+    "dayjs": "^1.11.6",
     "express": "^4.18.2",
     "mongoose": "^6.6.7",
     "nodemon": "^2.0.20"
